<resources>
    <string name="app_name">CareerRaft</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="about_me_atul_tiwari">Atul is the founder of Careerraft. His dream is to re-imagine education in a truly ‘student-first’ way and unlock the true potential of student. Atul holds an Integrated Master’s Degree in Applied Geology from Indian School of Mines, Dhanbad. An avid fan of cricket, Atul is a fitness enthusiast and his routine alternates between a long walk outdoors and a trip around the less crowded parts of the city. His leadership translation is simple - the essence of leadership is not only to have a vision but also what it takes to translate it into action.</string>
    <string name="about_me_amitava">Amitava is the Co-Founder and CTO at Careerraft. He oversees all things tech, including infrastructure, application management, and IT. Before Careerraft, Amitava has worked with several startups in medical, IT, SaaS domain and has expertise in both frontend and backend technologies. Fascinated by small ideas that turned into global powerhouses, and innovation, simplicity, and the potential of technology have always been his passions. Careerraft is a both a passion and a dream come true for him. Amitava has Master’s degree in business from Indiana University of Pennsylvania and Bachelor’s degree from the PES Institute of Applied Science. Amitava’s passion for technology does not stop at work and is always on the look-out for ways that he can use it to make his life easier</string>
    <string name="about_me_abhishek"><![CDATA[Abhishek is the Co-Founder and Chief Financial Officer at Careerraft. In addition to taking care of the company’s financial and legal side, he is also involved in General Management and Leadership Development. Abhishek also spearheads all Careerraft Joint Venture and M&A processes. Before Careerraft, Abhishek worked with IBM and Fintellix (earlier iCreate Softwares), handling many portfolios clients in Banking sector. Abhishek has an MBA from the Indian Institute of Management (IIM), Bangalore and Bachelor’s in Mineral Engineering from Indian School of Mines, Dhanbad. Abhishek believes in working hard, working smart, and living a balanced life. When he isn’t being a super-hero at work, he indulges in pencil sketching and creating art.]]></string>
    <string name="about_me_1">We are the fastest-growing family in the education space. Fed up with endless on-site visits and unavailable informational listings about institutes, we created an institute search system several notches above others. Led by passionate problem-solvers and backed by top minds, we are dedicated towards changing the trends in the field of education.</string>
    <string name="step_2_text">We Think (out of box)\nWe solve problems differently. With knowledge, passion and technology combined together, we drive innovation and set new benchmarks for excellence.</string>
    <string name="step_1_text">We Dream (with open eyes)\nWe see the world differently. We aim higher, dream bigger and explore deeper. We try to make anything better than anything ever done before.</string>
    <string name="step_3_text">We Work (to make the best)\nWe do things differently. We don’t stop at success, we always ask ‘what next?’ so we can change the game and keep on winning.</string>
    <string name="about_us_part_1">Whether you are just starting your research, want to narrow down your options, or have a specific question, Careerraft can help.</string>
    <string name="about_us_part_2">Read advice online and ask the experts</string>
    <string name="about_us_part_3">Get free help and advice from a pool of experts and friends about every aspect of your education.</string>
    <string name="about_us_part_4">Search and compare institutes</string>
    <string name="about_us_part_5">Search detailed, unbiased information about education institutes and resources. Careerraft aggregates data from the most trusted sources so you can spend less time digging through websites and more time focusing on your future.</string>
</resources>
