<?xml version="1.0" encoding="utf-8"?>
<careerraft.app.android.sec.com.careerraft.Utils.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="@dimen/margin_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:text="About Us"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_xslarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_me_1"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="What we do?"
            android:textColor="#FCFC0F"
            android:textSize="@dimen/text_size_xlarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:gravity="center"
            android:text="@string/about_us_part_1"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/about_us_part_2"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:gravity="center"
            android:text="@string/about_us_part_3"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/about_us_part_4"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:gravity="center"
            android:text="@string/about_us_part_5"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="How we do it?"
            android:textColor="#FCFC0F"
            android:textSize="@dimen/text_size_xlarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/text_view_circle_orange"
                android:gravity="center"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xslarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/step_1_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:padding="@dimen/margin_5"
                android:text="@string/step_1_text"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/text_view_circle_orange"
                android:gravity="center"
                android:text="2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xslarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/step_2_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:padding="@dimen/margin_5"
                android:text="@string/step_2_text"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/text_view_circle_orange"
                android:gravity="center"
                android:text="3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xslarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/step_3_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:padding="@dimen/margin_5"
                android:text="@string/step_3_text"
                android:textColor="@android:color/white"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>
</careerraft.app.android.sec.com.careerraft.Utils.CustomScrollView>