<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/team_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_20"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/atul_tiwari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_atul_tiwari"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/atul_tiwari"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Atul Tiwari"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/atul_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_5"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/atul_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_5"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/atul_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_15"
                android:src="@drawable/ic_linkedin" />
        </LinearLayout>

        <TextView
            android:id="@+id/atul_tiwari_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/about_me_atul_tiwari"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/amitava"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_amitava"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/amitava"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Amitawa Saha"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/amitava_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_5"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/amitava_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_5"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/amitava_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_15"
                android:src="@drawable/ic_linkedin" />
        </LinearLayout>

        <TextView
            android:id="@+id/amitava_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/about_me_amitava"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/abhishek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_abhishek"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/abhishek"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Abhishek Kundan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/abhishek_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_5"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/abhishek_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_5"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/abhishek_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_15"
                android:src="@drawable/ic_linkedin" />
        </LinearLayout>

        <TextView
            android:id="@+id/abhishek_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/about_me_abhishek"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_20" />

    </LinearLayout>
</ScrollView>